sleep log update added, tests mocks structure refactor
